--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=NTThong0710_flask-app-cicd
 sonar.organization=ntthong0710
+sonar.host.url=https://sonarcloud.io
 
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=test-results.xml
