Add SonarCloud GitHub Action

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,17 @@
 sonar.projectKey=NTThong0710_flask-app-cicd
 sonar.organization=ntthong0710
-sonar.host.url=https://sonarcloud.io
 
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.python.xunit.reportPath=test-results.xml
-
+# Đường dẫn đến mã nguồn
 sonar.sources=.
-sonar.exclusions=**/*test*,venv/**,**/__pycache__/**
+
+# Loại trừ các thư mục và file không cần phân tích
+sonar.exclusions=**/*.pyc,**/__pycache__/**,**/venv/**,**/tests/**
+
+# Python version
 sonar.python.version=3.9
+
+# Đường dẫn đến báo cáo coverage
+sonar.python.coverage.reportPaths=coverage.xml
+
+# Đường dẫn đến báo cáo test
+sonar.python.xunit.reportPath=test-results.xml
