--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: SonarCloud Analysis
 
 on:
   push:
-    branches: [ master, master ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, master ]
+    types: [opened, synchronize, reopened]
   # Cho phép chạy thủ công từ tab Actions trên GitHub
   workflow_dispatch:
 
@@ -13,7 +13,7 @@ jobs:
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Quan trọng để SonarCloud có thể xem các commit trước đó
       
