--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -294,20 +294,24 @@ jobs:
         ECR_REGISTRY=${{ steps.meta-ecr.outputs.registry }}
         ECR_REPOSITORY=${{ steps.meta-ecr.outputs.repository }}
         
-        # Primary image URI for deployment
+        # Primary image URI and tag for deployment
         if [[ $GITHUB_REF == refs/tags/* ]]; then
           VERSION=${GITHUB_REF#refs/tags/}
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$VERSION"
           IMAGE_TAG="$VERSION"
-        else
-          IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:latest"
+        elif [[ $GITHUB_REF == refs/heads/master ]]; then
           IMAGE_TAG="latest"
+        else
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          IMAGE_TAG="$BRANCH_NAME"
         fi
+        
+        IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
         
         echo "image-uri=$IMAGE_URI" >> $GITHUB_OUTPUT
         echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
         
         echo "🏗️ Built and pushed to ECR: $IMAGE_URI"
+        echo "🏷️ Image Tag: $IMAGE_TAG"
 
   # ===========================================
   # ECR SECURITY SCANNING
@@ -326,25 +330,60 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
     
+    - name: Debug ECR outputs
+      run: |
+        echo "🔍 Debug ECR Build Outputs:"
+        echo "ECR Image URI: ${{ needs.build-and-publish-ecr.outputs.ecr-image-uri }}"
+        echo "ECR Image Tag: ${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }}"
+        
+        # Validate tag is not empty
+        if [ -z "${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }}" ]; then
+          echo "❌ Error: ECR image tag is empty!"
+          exit 1
+        fi
+    
     - name: Run ECR image scan
       run: |
         echo "🔍 Starting ECR security scan..."
+        IMAGE_TAG="${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }}"
+        
+        echo "📋 Scan Parameters:"
+        echo "Repository: ${{ env.ECR_REPOSITORY }}"
+        echo "Image Tag: $IMAGE_TAG"
+        echo "Region: ${{ env.AWS_REGION }}"
         
         # Start image scan
         aws ecr start-image-scan \
           --repository-name ${{ env.ECR_REPOSITORY }} \
-          --image-id imageTag=${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }} \
+          --image-id imageTag=$IMAGE_TAG \
           --region ${{ env.AWS_REGION }}
         
         echo "⏳ Waiting for scan to complete..."
-        sleep 30
+        sleep 60
         
-        # Get scan results
-        SCAN_RESULTS=$(aws ecr describe-image-scan-findings \
-          --repository-name ${{ env.ECR_REPOSITORY }} \
-          --image-id imageTag=${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }} \
-          --region ${{ env.AWS_REGION }} \
-          --output json)
+        # Get scan results with retry logic
+        for i in {1..5}; do
+          echo "📊 Attempt $i: Getting scan results..."
+          
+          SCAN_RESULTS=$(aws ecr describe-image-scan-findings \
+            --repository-name ${{ env.ECR_REPOSITORY }} \
+            --image-id imageTag=$IMAGE_TAG \
+            --region ${{ env.AWS_REGION }} \
+            --output json 2>/dev/null || echo "null")
+          
+          if [ "$SCAN_RESULTS" != "null" ]; then
+            echo "✅ Scan results retrieved successfully"
+            break
+          else
+            echo "⏳ Scan still in progress, waiting 30s..."
+            sleep 30
+          fi
+        done
+        
+        if [ "$SCAN_RESULTS" == "null" ]; then
+          echo "⚠️ Could not retrieve scan results, but scan was initiated"
+          exit 0
+        fi
         
         echo "📊 Scan Results:"
         echo "$SCAN_RESULTS" | jq '.imageScanFindingsSummary'
@@ -357,8 +396,7 @@ jobs:
         echo "⚠️ High vulnerabilities: $HIGH_COUNT"
         
         if [ "$CRITICAL_COUNT" -gt 0 ]; then
-          echo "❌ Critical vulnerabilities found! Review required."
-          # Don't fail the build, just warn
+          echo "❌ Critical vulnerabilities found! Review recommended."
         fi
 
   # ===========================================
