--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -354,7 +354,7 @@ jobs:
           exit 1
         fi
     
-    - name: Run ECR image scan
+    - name: Start ECR image scan
       run: |
         echo "🔍 Starting ECR security scan..."
         IMAGE_TAG="${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }}"
@@ -364,52 +364,95 @@ jobs:
         echo "Image Tag: $IMAGE_TAG"
         echo "Region: ${{ env.AWS_REGION }}"
         
-        # Start image scan
-        aws ecr start-image-scan \
+        # Start image scan with enhanced error handling
+        if aws ecr start-image-scan \
           --repository-name ${{ env.ECR_REPOSITORY }} \
           --image-id imageTag=$IMAGE_TAG \
-          --region ${{ env.AWS_REGION }}
+          --region ${{ env.AWS_REGION }}; then
+          echo "✅ Image scan started successfully"
+          echo "SCAN_STARTED=true" >> $GITHUB_ENV
+        else
+          echo "⚠️ Failed to start image scan (possibly unsupported image type or scan already in progress)"
+          echo "SCAN_STARTED=false" >> $GITHUB_ENV
+        fi
+    
+    - name: Get scan results
+      if: env.SCAN_STARTED == 'true'
+      run: |
+        IMAGE_TAG="${{ needs.build-and-publish-ecr.outputs.ecr-image-tag }}"
         
         echo "⏳ Waiting for scan to complete..."
-        sleep 60
+        sleep 90
         
         # Get scan results with retry logic
         for i in {1..5}; do
           echo "📊 Attempt $i: Getting scan results..."
           
-          SCAN_RESULTS=$(aws ecr describe-image-scan-findings \
+          if SCAN_RESULTS=$(aws ecr describe-image-scan-findings \
             --repository-name ${{ env.ECR_REPOSITORY }} \
             --image-id imageTag=$IMAGE_TAG \
             --region ${{ env.AWS_REGION }} \
-            --output json 2>/dev/null || echo "null")
-          
-          if [ "$SCAN_RESULTS" != "null" ]; then
+            --output json 2>/dev/null); then
+            
             echo "✅ Scan results retrieved successfully"
-            break
+            
+            # Parse and display results
+            SCAN_STATUS=$(echo "$SCAN_RESULTS" | jq -r '.imageScanStatus.status')
+            echo "📋 Scan Status: $SCAN_STATUS"
+            
+            if [ "$SCAN_STATUS" == "COMPLETE" ]; then
+              echo "📊 Vulnerability Summary:"
+              echo "$SCAN_RESULTS" | jq '.imageScanFindingsSummary'
+              
+              # Check for critical vulnerabilities
+              CRITICAL_COUNT=$(echo "$SCAN_RESULTS" | jq -r '.imageScanFindingsSummary.findingCounts.CRITICAL // 0')
+              HIGH_COUNT=$(echo "$SCAN_RESULTS" | jq -r '.imageScanFindingsSummary.findingCounts.HIGH // 0')
+              MEDIUM_COUNT=$(echo "$SCAN_RESULTS" | jq -r '.imageScanFindingsSummary.findingCounts.MEDIUM // 0')
+              
+              echo "🚨 Critical vulnerabilities: $CRITICAL_COUNT"
+              echo "⚠️ High vulnerabilities: $HIGH_COUNT"
+              echo "📝 Medium vulnerabilities: $MEDIUM_COUNT"
+              
+              if [ "$CRITICAL_COUNT" -gt 0 ]; then
+                echo "❌ Critical vulnerabilities found! Review recommended."
+                # List some critical findings
+                echo "$SCAN_RESULTS" | jq -r '.imageScanFindings[] | select(.severity == "CRITICAL") | "- \(.name): \(.description)"' | head -5
+              else
+                echo "✅ No critical vulnerabilities found"
+              fi
+              
+              break
+            else
+              echo "⏳ Scan status: $SCAN_STATUS, waiting..."
+              sleep 30
+            fi
           else
-            echo "⏳ Scan still in progress, waiting 30s..."
+            echo "⏳ Scan results not ready yet, waiting 30s..."
             sleep 30
           fi
         done
+    
+    - name: Alternative security check
+      if: env.SCAN_STARTED == 'false'
+      run: |
+        echo "🔍 Running alternative security check with Trivy..."
         
-        if [ "$SCAN_RESULTS" == "null" ]; then
-          echo "⚠️ Could not retrieve scan results, but scan was initiated"
-          exit 0
-        fi
+        # Install Trivy
+        sudo apt-get update
+        sudo apt-get install wget apt-transport-https gnupg lsb-release
+        wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+        echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+        sudo apt-get update
+        sudo apt-get install trivy
         
-        echo "📊 Scan Results:"
-        echo "$SCAN_RESULTS" | jq '.imageScanFindingsSummary'
+        # Login to ECR
+        aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ needs.build-and-publish-ecr.outputs.ecr-image-uri-base }}
         
-        # Check for critical vulnerabilities
-        CRITICAL_COUNT=$(echo "$SCAN_RESULTS" | jq -r '.imageScanFindingsSummary.findingCounts.CRITICAL // 0')
-        HIGH_COUNT=$(echo "$SCAN_RESULTS" | jq -r '.imageScanFindingsSummary.findingCounts.HIGH // 0')
+        # Scan with Trivy
+        IMAGE_URI="${{ needs.build-and-publish-ecr.outputs.ecr-image-uri }}"
+        echo "🔍 Scanning $IMAGE_URI with Trivy..."
         
-        echo "🚨 Critical vulnerabilities: $CRITICAL_COUNT"
-        echo "⚠️ High vulnerabilities: $HIGH_COUNT"
-        
-        if [ "$CRITICAL_COUNT" -gt 0 ]; then
-          echo "❌ Critical vulnerabilities found! Review recommended."
-        fi
+        trivy image --severity HIGH,CRITICAL --format table $IMAGE_URI || echo "⚠️ Trivy scan completed with warnings"
 
   # ===========================================
   # ARTIFACT PROMOTION & DEPLOYMENT
