--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -365,18 +365,35 @@ jobs:
         echo "📦 Deploying image: $ECR_IMAGE_URI"
         
         # Deploy to EC2
-        ssh -i ~/.ssh/id_rsa ec2-user@${{ env.EC2_IP }} << EOF
-          # Configure AWS CLI on EC2 (if not already configured)
-          export AWS_DEFAULT_REGION=${{ env.AWS_REGION }}
+        ssh -i ~/.ssh/id_rsa ec2-user@${{ env.EC2_IP }} << 'EOF'
+          # Check if AWS CLI is installed
+          if ! command -v aws &> /dev/null; then
+            echo "📥 Installing AWS CLI..."
+            sudo yum update -y
+            sudo yum install -y aws-cli
+          fi
+          
+          # Configure AWS credentials for this session
+          export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+          export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          export AWS_DEFAULT_REGION="${{ env.AWS_REGION }}"
+          
+          # Verify AWS credentials
+          echo "🔐 Verifying AWS credentials..."
+          if ! aws sts get-caller-identity; then
+            echo "❌ AWS credentials verification failed"
+            exit 1
+          fi
           
           # Login to ECR
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ needs.build-and-publish-ecr.outputs.ecr-image-uri-base }}
+          echo "🔑 Logging into ECR..."
+          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin 762233753584.dkr.ecr.ap-southeast-1.amazonaws.com
           
           echo "📦 Pulling image from ECR: $ECR_IMAGE_URI"
           docker pull $ECR_IMAGE_URI
           
           echo "💾 Creating backup of current container"
-          docker tag flask-app:current flask-app:backup-\$(date +%Y%m%d-%H%M%S) 2>/dev/null || true
+          docker tag flask-app:current flask-app:backup-$(date +%Y%m%d-%H%M%S) 2>/dev/null || true
           
           echo "🔄 Updating application..."
           docker stop flask-app 2>/dev/null || true
@@ -389,7 +406,7 @@ jobs:
             -p 5000:5000 \
             --label "version=${{ github.ref_name }}" \
             --label "build.number=${{ github.run_number }}" \
-            --label "deployed.at=\$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+            --label "deployed.at=$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
             --label "source=aws-ecr" \
             $ECR_IMAGE_URI
           
@@ -409,10 +426,10 @@ jobs:
             docker rm flask-app 2>/dev/null || true
             
             # Rollback to backup if exists
-            BACKUP_IMAGE=\$(docker images --format "{{.Repository}}:{{.Tag}}" flask-app:backup-* | head -1)
-            if [ ! -z "\$BACKUP_IMAGE" ]; then
-              docker run -d --name flask-app --restart unless-stopped -p 5000:5000 \$BACKUP_IMAGE
-              echo "🔙 Rolled back to: \$BACKUP_IMAGE"
+            BACKUP_IMAGE=$(docker images --format "{{.Repository}}:{{.Tag}}" flask-app:backup-* | head -1)
+            if [ ! -z "$BACKUP_IMAGE" ]; then
+              docker run -d --name flask-app --restart unless-stopped -p 5000:5000 $BACKUP_IMAGE
+              echo "🔙 Rolled back to: $BACKUP_IMAGE"
             fi
             exit 1
           fi
@@ -463,7 +480,6 @@ jobs:
         echo "## 📊 Pipeline Results" >> artifact-report.md
         echo "- **GitHub Packages Build:** ${{ needs.build-and-publish-github.result }}" >> artifact-report.md
         echo "- **ECR Build:** ${{ needs.build-and-publish-ecr.result }}" >> artifact-report.md
-        echo "- **ECR Security Scan:** ${{ needs.ecr-security-scan.result }}" >> artifact-report.md
         echo "- **Production Deployment:** ${{ needs.promote-and-deploy.result }}" >> artifact-report.md
         echo "" >> artifact-report.md
         
